# cc-list

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  dist-workspace.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: resume.md
src/: main.rs  open.rs  sessions.rs  ui.rs
